Wed Feb 11 10:58:13 CET 1998

	- Added '-d' option to turn on debugging.
	- Added version number to ecpg.
	- Made libecpg a shared library.
	- All files are now installed by 'make install'.
	- Added man page.

Thu Feb 12 14:45:07 CET 1998

	- changed parser to correctly handle local variables.

Thu Feb 12 15:55:37 CET 1998

	- allow static and extern variable definitions.
	- free() variable structure completely.

Fri Feb 13 12:35:58 CET 1998

	- ecpg can use structs to store data, but only if the complete
	  definition of the struct lies inside the sql declare section
	  and only simple types used.

Fre Feb 13 14:12:41 CET 1998

	- struct definitions now work completely.

Mon Feb 16 16:17:21 CET 1998

	- enable initialisation in declare section.
	- connect call accepts a variable as well. 

Wed Feb 18 21:41:30 CET 1998

	- added whenever statement

Thu Feb 19 12:48:14 CET 1998

	- added do option to whenever statement

Sat Feb 21 19:10:55 CET 1998

	- use char[] as string not as array of bytes that is integers

Sun Feb 22 16:37:36 CET 1998

	- use long for all size variables
	- added execute immediate statement

Sun Feb 22 20:41:32 CET 1998

	- use varcharsize = 1 for all simple types, 0 means pointer, > 1
	  means array if type is char resp. unsigned char

Thu Feb 24 12:26:12 CET 1998

	- allow 'go to' in whenever statement as well as 'goto'
	- new argument 'stop' for whenever statement

Wed Feb 25 15:46:50 CET 1998

	- corrected whenever continue handling
	- removed whenever break
