@@ -1,8 +1,0 @@
-create table meskes(name char8, born int4, age int2);
-
-insert into meskes(name, born) values ('Petra', 19661202, 31);
-insert into meskes(name, born) values ('Michael', 19660117, 32);
-insert into meskes(name, born) values ('Carsten', 19910103, 7);
-insert into meskes(name, born) values ('Marc', 19930907, 4);
-insert into meskes(name, born) values ('Chris', 19970923, 0);
-
