@@ -62,3 +62,12 @@ Wed Feb 25 15:46:50 CET 1998
 	- corrected whenever continue handling
 	- removed whenever break
 
+Fri Feb 27 10:51:38 CET 1998
+
+	- corrected parser to accept '::int2'
+
+Fri Feb 27 12:00:55 CET 1998
+
+	- removed all shift/reduce conflicts
+	- allow syntax 'fetch cursor' as well as 'fetch in cursor'
+
